--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -11,13 +11,13 @@
         tools:context="ncon.barsu.edu.client.RegActivity" android:background="@color/material_blue_grey_900">
 
     <EditText
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/editNick" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:hint="Nickname" android:textColor="#ffffff"
-            android:textColorHint="#64ffffff"/>
+            android:textColorHint="#64ffffff" android:layout_marginRight="30dp"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
             android:ems="10"
             android:id="@+id/editFName" android:layout_below="@+id/editNick" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:hint="First name"
-            android:textColor="#ffffff" android:textColorHint="#64ffffff"/>
+            android:textColor="#ffffff" android:textColorHint="#64ffffff" android:layout_alignRight="@+id/editNick"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
             android:ems="10"
             android:id="@+id/editLName" android:layout_below="@+id/editFName" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:hint="Last name"
-            android:textColor="#ffffff" android:textColorHint="#64ffffff"/>
+            android:textColor="#ffffff" android:textColorHint="#64ffffff" android:layout_alignRight="@+id/editFName"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -41,7 +41,8 @@
             android:ems="10"
             android:id="@+id/editPass1" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:hint="Enter password" android:layout_marginTop="20dp"
-            android:layout_below="@+id/editLName" android:textColor="#ffffff" android:textColorHint="#64ffffff"/>
+            android:layout_below="@+id/editLName" android:textColor="#ffffff" android:textColorHint="#64ffffff"
+            android:layout_alignRight="@+id/editLName"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -49,7 +50,7 @@
             android:ems="10"
             android:id="@+id/editPass2" android:layout_below="@+id/editPass1" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:hint="Confirm password"
-            android:textColor="#ffffff" android:textColorHint="#64ffffff"/>
+            android:textColor="#ffffff" android:textColorHint="#64ffffff" android:layout_alignRight="@+id/editPass1"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
             android:ems="10"
             android:id="@+id/editEmail" android:layout_below="@+id/editPass2" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:hint="Enter E-mail"
-            android:textColor="#ffffff" android:textColorHint="#64ffffff"/>
+            android:textColor="#ffffff" android:textColorHint="#64ffffff" android:layout_alignRight="@+id/editPass2"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -65,7 +66,8 @@
             android:ems="10"
             android:id="@+id/editDateofBirth" android:layout_below="@+id/editEmail" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:textColor="#ffffff"
-            android:hint="Enter date of birth" android:textColorHint="#64ffffff"/>
+            android:hint="Enter date of birth" android:textColorHint="#64ffffff"
+            android:layout_alignRight="@+id/editEmail"/>
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
