--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,7 @@
             android:id="@+id/editPass"
             android:textColor="#ffffff"
             android:hint="Password" android:textColorHint="#64ffffff"
-            android:layout_alignBaseline="@+id/btnRecovery"
-            android:layout_alignBottom="@+id/btnRecovery"
-            android:layout_toLeftOf="@+id/btnRecovery"
+            android:layout_alignTop="@+id/btnRecovery" android:layout_toLeftOf="@+id/btnRecovery"
             android:layout_toStartOf="@+id/btnRecovery"/>
     <EditText
             android:layout_width="fill_parent"
@@ -51,7 +49,7 @@
             android:layout_above="@+id/editPass"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="26dp"/>
+            android:layout_marginBottom="26dp" android:inputType="textPersonName"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
