--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -12,7 +12,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_account"
-        tools:context="ncon.barsu.edu.client.AccountActivity">
+        tools:context="ncon.barsu.edu.client.AccountActivity" android:background="@color/material_blue_grey_800">
 
     <TextView
             android:layout_width="wrap_content"
@@ -20,57 +20,66 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="First name:"
             android:id="@+id/textView2" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true" android:textColor="@color/abc_btn_colored_borderless_text_material"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Last name:"
             android:id="@+id/textView3" android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
+            android:layout_alignParentStart="true" android:layout_marginTop="50dp"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="E-mail:"
             android:id="@+id/textView4" android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
+            android:layout_alignParentStart="true" android:layout_marginTop="50dp"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Date Of Birthday:"
             android:id="@+id/textView5" android:layout_below="@+id/textView4" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_marginTop="20dp"/>
+            android:layout_alignParentStart="true" android:layout_marginTop="50dp"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/tvAccBirthday" android:layout_alignTop="@+id/textView5"
-            android:layout_toRightOf="@+id/textView5" android:layout_toEndOf="@+id/textView5"
-            android:layout_marginLeft="20dp"/>
+            android:id="@+id/tvAccBirthday"
+            android:layout_alignLeft="@+id/tvAccEmail" android:layout_below="@+id/textView5"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/tvAccEmail" android:layout_above="@+id/tvAccBirthday" android:layout_alignLeft="@+id/tvAccBirthday"
-            android:layout_alignStart="@+id/tvAccBirthday" android:layout_marginBottom="20dp"/>
+            android:id="@+id/tvAccEmail"
+            android:layout_below="@+id/textView4"
+            android:layout_marginTop="5dp" android:layout_alignLeft="@+id/tvAccLName"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/tvAccLName" android:layout_alignTop="@+id/textView3"
-            android:layout_alignLeft="@+id/tvAccEmail" android:layout_alignStart="@+id/tvAccEmail"
-            android:layout_marginBottom="20dp"/>
+            android:id="@+id/tvAccLName"
+            android:layout_below="@+id/textView3" android:layout_marginTop="5dp"
+            android:layout_alignLeft="@+id/tvAccFName"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/tvAccFName" android:layout_alignTop="@+id/textView2"
-            android:layout_alignLeft="@+id/tvAccLName" android:layout_alignStart="@+id/tvAccLName"
-            android:layout_marginBottom="20dp"/>
+            android:id="@+id/tvAccFName"
+            android:layout_below="@+id/textView2"
+            android:layout_marginTop="5dp" android:layout_marginLeft="30dp"
+            android:textColor="@color/abc_btn_colored_borderless_text_material"/>
 </RelativeLayout>
