--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -66,7 +66,7 @@
             android:ems="10"
             android:id="@+id/editDateofBirth" android:layout_below="@+id/editEmail" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:textColor="#ffffff"
-            android:hint="Enter date of birth" android:textColorHint="#64ffffff"
+            android:hint="DD.MM.YYYY Data of Birth format" android:textColorHint="#64ffffff"
             android:layout_alignRight="@+id/editEmail"/>
     <Button
             android:layout_width="fill_parent"
