--- a/app/src/main/res/menu/activity_account_drawer.xml
+++ b/app/src/main/res/menu/activity_account_drawer.xml
@@ -5,6 +5,10 @@
         <item android:title="Social">
             <menu>
                 <item
+                        android:id="@+id/nav_profile"
+                        android:icon="@drawable/ic_menu_profile"
+                        android:title="Profile"/>
+                <item
                         android:id="@+id/nav_messenger"
                         android:icon="@drawable/ic_menu_messenger"
                         android:title="Messenger"/>
