--- a/app/src/main/res/layout/messenger.xml
+++ b/app/src/main/res/layout/messenger.xml
@@ -13,14 +13,17 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/etMsg" android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/ivSend" android:hint="Your message..."
+                android:layout_toStartOf="@+id/ivSend"
+                android:hint="Your message"
                 android:textColor="@color/material_grey_600"/>
         <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ivSend"
-                android:src="@drawable/ic_menu_send_msg" android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true" android:layout_alignTop="@+id/etMsg"
+                android:src="@drawable/ic_menu_send_msg"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/etMsg"
                 android:baselineAlignBottom="false"/>
         <ListView
                 android:layout_width="wrap_content"
